--- a/invitation.html
+++ b/invitation.html
@@ -189,7 +189,7 @@
             À la Mairie de <strong>CHARENTON-LE-PONT</strong><br>
             Cérémonie à : <span style="color:var(--coral); font-weight:600;">13H30</span>
         </div>
-        <a href="https://maps.google.com/?q=Mairie+de+Charenton-le-Pont" target="_blank" class="btn-action btn-outline">Itinéraire Mairie</a>
+        <a href="https://www.waze.com/ul?q=Mairie%20de%20Charenton-le-Pont%2048%20rue%20de%20Paris" target="_blank" class="btn-action btn-outline">Itinéraire Waze Mairie</a>
     </div>
 
     <div class="image-section img-bague reveal"></div>
@@ -216,7 +216,7 @@
             </p>
         </div>
 
-        <a href="https://waze.com/ul?q=Chateau+des+Hauts+de+Provins" target="_blank" class="btn-action btn-outline" style="margin-top: 25px;">Y aller avec Waze</a>
+        <a href="https://www.waze.com/ul?q=Chateau+des+Hauts+de+Provins" target="_blank" class="btn-action btn-outline" style="margin-top: 25px;">Y aller avec Waze</a>
     </div>
 
     <div class="wedding-card reveal">
